--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+:root {
+  --primary-color: #2b2d42;
+  --secondary-color: #8d99ae;
+  --accent-color: #ef233c;
+  --text-color: #edf2f4;
+  --ternary-color: #e5e5e5;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,5 +15,17 @@
 body {
   font-family: "system-ui", sans-serif;
   height: 100vh;
-  background-color: #2b2a33;
+  background-color: var(--primary-color);
+}
+
+.head {
+  background-color: var(--ternary-color);
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.nav {
+  width: 80%;
+
 }
