--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,41 @@
 
 body {
   font-family: "system-ui", sans-serif;
-  height: 100vh;
   background-color: var(--primary-color);
 }
 
 .head {
   background-color: var(--ternary-color);
   padding: 50px;
-  display: flex;
-  justify-content: center;
 }
 
 .nav {
-  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.img-div {
+  width: 80%;
+  position: relative;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.img-div img {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  object-fit: cover;
+} 
+
+.img-div h1 {
+  position: absolute;
+  color: var(--text-color);
+  bottom: 0;
+  left: 0.8rem;
 }
