--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 }
 
 .img-div {
-  width: 80%;
+  width: 100%;
   position: relative;
 }
 
@@ -51,4 +51,32 @@ body {
   color: var(--text-color);
   bottom: 0;
   left: 0.8rem;
+}
+
+.about-div {
+  background-color: var(--secondary-color);
+  padding: 1.3rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.about p {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.content {
+  line-height: 1.3;
+}
+
+.socials {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1.3rem;
+  cursor: pointer;
 }
